# cpp_project_template

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/executable/: CMakeLists.txt  executable.cpp
src/shared_lib/: CMakeLists.txt  greeter.cpp  greeter.h
test/: CMakeLists.txt
test/src/: CMakeLists.txt
